remove "/" before assets

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
                 </div>
                 <div class="exp-block">
-                    <img src="/assets/images/about.jpeg" alt="">
+                    <img src="assets/images/about.jpeg" alt="">
                 </div>
             </section>
 
