--- a/catalogue.html
+++ b/catalogue.html
@@ -95,59 +95,59 @@
 
             <!-- EXPERIMENTS -->
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e1.html"
-              data-preview="/assets/videos/e1-hover.mp4" data-caption="E-1 — Playlist Visualiser">
+              data-preview="assets/videos/e1-hover.mp4" data-caption="E-1 — Playlist Visualiser">
               E-1
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e2.html"
-              data-preview="/assets/videos/e2-hover.mp4" data-caption="E-2 — ASCII Patterns">
+              data-preview="assets/videos/e2-hover.mp4" data-caption="E-2 — ASCII Patterns">
               E-2
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e3.html"
-              data-preview="/assets/videos/e3-hover.mp4" data-caption="E-3 — Typographic Network">
+              data-preview="assets/videos/e3-hover.mp4" data-caption="E-3 — Typographic Network">
               E-3
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e4.html"
-              data-preview="/assets/videos/e4-hover.mp4" data-caption="E-4 — Text Constellation">
+              data-preview="assets/videos/e4-hover.mp4" data-caption="E-4 — Text Constellation">
               E-4
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e5.html"
-              data-preview="/assets/videos/e5-hover.mp4" data-caption="E-5 — Input Flux">
+              data-preview="assets/videos/e5-hover.mp4" data-caption="E-5 — Input Flux">
               E-5
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e6.html"
-              data-preview="/assets/videos/e6-hover.mp4" data-caption="E-6 — Input Flux">
+              data-preview="assets/videos/e6-hover.mp4" data-caption="E-6 — Input Flux">
               E-6
             </div>
 
             <div class="catalogue-circle" data-type="experiment" data-target="experiment-e7.html"
-              data-preview="/assets/videos/e7-hover.mp4" data-caption="E-7 — Input Flux">
+              data-preview="assets/videos/e7-hover.mp4" data-caption="E-7 — Input Flux">
               E-7
             </div>
 
 
             <!-- PROTOTYPES -->
             <div class="catalogue-circle" data-type="prototype" data-target="prototype-p1.html"
-              data-preview="/assets/videos/p1-hover.mp4" data-caption="P-1 — Algorithmic Resonance">
+              data-preview="assets/videos/p1-hover.mp4" data-caption="P-1 — Algorithmic Resonance">
               P-1
             </div>
 
             <div class="catalogue-circle" data-type="prototype" data-target="prototype-p2.html"
-              data-preview="/assets/videos/p2-visuals.mp4" data-caption="P-2 — Feed Intervention Interface (prototype).">
+              data-preview="assets/videos/p2-visuals.mp4" data-caption="P-2 — Feed Intervention Interface (prototype).">
               P-2
             </div>
 
             <div class="catalogue-circle" data-type="prototype" data-target="prototype-p3.html"
-              data-preview="/assets/videos/p3-hover.mp4" data-caption="P-3 — Exhibition Microsite (prototype).">
+              data-preview="assets/videos/p3-hover.mp4" data-caption="P-3 — Exhibition Microsite (prototype).">
               P-3
             </div>
 
             <div class="catalogue-circle" data-type="prototype" data-target="prototype-p4.html"
-              data-preview="/assets/videos/p4-hover.mp4" data-caption="P-4 — Exhibition Microsite (prototype).">
+              data-preview="assets/videos/p4-hover.mp4" data-caption="P-4 — Exhibition Microsite (prototype).">
               P-4
             </div>
 
