--- a/experiment-e1.html
+++ b/experiment-e1.html
@@ -115,13 +115,13 @@
             <section class="exp-row four-col-gallery">
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/zen-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/zen-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: better yet? <br><em>zen</em></figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/katsudon-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/katsudon-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: heavy-hearted <br><em>katsudon</em></figcaption>
                 </figure>
@@ -147,13 +147,13 @@
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/katsudon-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/katsudon-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: vietnam banging bangers <br><em>xinru</em></figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/laven-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/laven-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: yp era <br><em>laven</em></figcaption>
                 </figure>
@@ -163,26 +163,26 @@
             <section class="exp-row four-col-gallery">
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/davier-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/davier-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: v183 <br><em>davier</em></figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/evab-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/evab-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: feelings of growing up <br><em>evab and lizzy</em>
                     </figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/kosann-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/kosann-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: oohyo only <br><em>ko sann</em></figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/henry-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/henry-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: jugg <br><em>henry</em></figcaption>
                 </figure>
@@ -192,13 +192,13 @@
             <section class="exp-row four-col-gallery">
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/sayu-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/sayu-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: winter <br><em>sayu</em></figcaption>
                 </figure>
                 <figure class="gallery-item">
                     <div class="img-box">
-                        <video src="/assets/videos/arminaq-playlist.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/arminaq-playlist.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Playlist</strong>: habib <br><em>arminaq</em></figcaption>
                 </figure>
@@ -250,7 +250,7 @@
             </section>
 
             <section class="exp-row full">
-                <video src="/assets/videos/e1-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e1-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
