--- a/experiment-e2.html
+++ b/experiment-e2.html
@@ -108,7 +108,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/e2-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/e2-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -304,7 +304,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e2-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e2-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
