--- a/experiment-e3.html
+++ b/experiment-e3.html
@@ -121,14 +121,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-1.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-1.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: Growth</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-1.png"></image>
+                        <image src="assets/images/e3-1.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -138,14 +138,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-2.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-2.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: Particles</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-2.png"></image>
+                        <image src="assets/images/e3-2.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -155,14 +155,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-3.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-3.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: Float</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-3.png"></image>
+                        <image src="assets/images/e3-3.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -172,14 +172,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-4.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-4.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: Blocks</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-4.png"></image>
+                        <image src="assets/images/e3-4.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -189,14 +189,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-5.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-5.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: Grid</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-5.png"></image>
+                        <image src="assets/images/e3-5.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -206,14 +206,14 @@
             <section class="exp-row two-col-gallery-2">
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <video src="/assets/videos/e3-6.mp4" autoplay muted loop playsinline></video>
+                        <video src="assets/videos/e3-6.mp4" autoplay muted loop playsinline></video>
                     </div>
                     <figcaption><strong>Effect</strong>: 3D</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
                     <div class="img-box ascii-video-box">
-                        <image src="/assets/images/e3-6.png"></image>
+                        <image src="assets/images/e3-6.png"></image>
                     </div>
                     <figcaption><strong>Output</strong></figcaption>
                 </figure>
@@ -232,7 +232,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e3-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e3-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption><strong>Effect: 3d</strong> / <em>p5.js experiment demo</em></figcaption>
             </section>
 
