--- a/experiment-e5.html
+++ b/experiment-e5.html
@@ -112,7 +112,7 @@ Input Flux was developed as a conceptual exploration of how algorithmic systems 
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e5-demo-1.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e5-demo-1.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
