--- a/experiment-e7.html
+++ b/experiment-e7.html
@@ -98,7 +98,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/e7-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/e7-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -153,34 +153,34 @@
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
-                <div class="exp-block"><img src="/assets/images/e6-id-1.png"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-1.png"></div>
                 <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-2.png"></div>
-                <div class="exp-block"></div>
-            </section>
-
-            <!-- 4 COLUMNS -->
-            <section class="exp-row cols-4">
-                <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-3.png"></div>
-                <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-4.png"></div>
-            </section>
-
-            <!-- 4 COLUMNS -->
-            <section class="exp-row cols-4">
-                <div class="exp-block"><img src="/assets/images/e6-id-5.png"></div>
-                <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-6.png"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-2.png"></div>
                 <div class="exp-block"></div>
             </section>
 
             <!-- 4 COLUMNS -->
             <section class="exp-row cols-4">
                 <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-7.png"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-3.png"></div>
                 <div class="exp-block"></div>
-                <div class="exp-block"><img src="/assets/images/e6-id-8.png"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-4.png"></div>
+            </section>
+
+            <!-- 4 COLUMNS -->
+            <section class="exp-row cols-4">
+                <div class="exp-block"><img src="assets/images/e6-id-5.png"></div>
+                <div class="exp-block"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-6.png"></div>
+                <div class="exp-block"></div>
+            </section>
+
+            <!-- 4 COLUMNS -->
+            <section class="exp-row cols-4">
+                <div class="exp-block"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-7.png"></div>
+                <div class="exp-block"></div>
+                <div class="exp-block"><img src="assets/images/e6-id-8.png"></div>
             </section>
 
             <!-- ROW 3 — IMAGE LEFT / TEXT RIGHT -->
@@ -196,7 +196,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e7-demo-1.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e7-demo-1.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
