--- a/prototype-p2.html
+++ b/prototype-p2.html
@@ -105,7 +105,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/p2-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/p2-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -160,7 +160,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/p2-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/p2-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption><em>p5.js experiment demo</em></figcaption>
             </section>
 
