--- a/week14.html
+++ b/week14.html
@@ -72,19 +72,19 @@
             <section class="exp-row four-col-gallery">
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-1.png">
+                    <img src="assets/images/e-1.png">
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-2.png">
+                    <img src="assets/images/e-2.png">
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-3.png">
+                    <img src="assets/images/e-3.png">
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-4.png">
+                    <img src="assets/images/e-4.png">
                 </figure>
 
             </section>
@@ -178,7 +178,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/w14-hero.mp4" autoplay muted loop playsinline
+                <video src="assets/videos/w14-hero.mp4" autoplay muted loop playsinline
                     style="border-radius: 0px; border: 0;"></video>
             </section>
 
