--- a/week7.html
+++ b/week7.html
@@ -224,7 +224,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/w7-vid.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/w7-vid.mp4" autoplay muted loop playsinline></video>
             </section>
 
             <!-- ROW 2 — SPLIT ROW -->
