--- a/experiment-e4.html
+++ b/experiment-e4.html
@@ -114,7 +114,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-1.png"></image>
+                        <image src="assets/images/e4-1.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: algorithmic</figcaption>
                 </figure>
@@ -125,7 +125,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-2.png"></image>
+                        <image src="assets/images/e4-2.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: identities</figcaption>
                 </figure>
@@ -142,7 +142,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-3.png"></image>
+                        <image src="assets/images/e4-3.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: datafication</figcaption>
                 </figure>
@@ -153,7 +153,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-4.png"></image>
+                        <image src="assets/images/e4-4.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: manipulation</figcaption>
                 </figure>
@@ -170,7 +170,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-5.png"></image>
+                        <image src="assets/images/e4-5.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: surveillance</figcaption>
                 </figure>
@@ -181,7 +181,7 @@
 
                 <figure class="gallery-item">
                     <div class="img-box text-video-box">
-                        <image src="/assets/images/e4-6.png"></image>
+                        <image src="assets/images/e4-6.png"></image>
                     </div>
                     <figcaption><strong>Text</strong>: capitalism</figcaption>
                 </figure>
@@ -204,7 +204,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e4-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e4-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
