--- a/experiment-e6.html
+++ b/experiment-e6.html
@@ -107,7 +107,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/e6-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/e6-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -125,7 +125,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e6-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/e6-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
