--- a/prototype-p1.html
+++ b/prototype-p1.html
@@ -102,7 +102,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/p1-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/p1-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -158,7 +158,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/p1-demo.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/p1-demo.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
