--- a/prototype-p3.html
+++ b/prototype-p3.html
@@ -103,7 +103,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <img src="/assets/images/p3-diagram.jpg" alt="" style="transform: scale(0.8);">
+                <img src="assets/images/p3-diagram.jpg" alt="" style="transform: scale(0.8);">
                 <figcaption style="font-size: 12px; margin-top: 20px; text-align: center;">Breakdown of Algorithmic
                     Processes</figcaption>
             </section>
@@ -119,12 +119,12 @@
             <section class="exp-row four-col-gallery">
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-1.png">
+                    <img src="assets/images/e-1.png">
                     <figcaption><strong>Personal</strong><br>Mun</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-2.png">
+                    <img src="assets/images/e-2.png">
                     <figcaption><strong>System</strong><br>Mun</figcaption>
                 </figure>
 
@@ -145,12 +145,12 @@
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-3.png">
+                    <img src="assets/images/e-3.png">
                     <figcaption><strong>Personal</strong><br>Shawn</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/e-4.png">
+                    <img src="assets/images/e-4.png">
                     <figcaption><strong>System</strong><br>Shawn</figcaption>
                 </figure>
 
@@ -159,12 +159,12 @@
             <section class="exp-row four-col-gallery">
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/p3-5.png">
+                    <img src="assets/images/p3-5.png">
                     <figcaption><strong>Personal</strong><br>Hugo</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/p3-6.png">
+                    <img src="assets/images/p3-6.png">
                     <figcaption><strong>System</strong><br>Hugo</figcaption>
                 </figure>
 
@@ -185,12 +185,12 @@
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/p3-8.png">
+                    <img src="assets/images/p3-8.png">
                     <figcaption><strong>Personal</strong><br>Laven</figcaption>
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="/assets/images/p3-7.png">
+                    <img src="assets/images/p3-7.png">
                     <figcaption><strong>System</strong><br>Laven</figcaption>
                 </figure>
 
@@ -206,7 +206,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/p1.mp4" autoplay muted loop playsinline></video>
+                <video src="assets/videos/p1.mp4" autoplay muted loop playsinline></video>
                 <figcaption style="font-size: 12px; padding: 6px 14px; margin-top: 20px;"><em>p5.js experiment demo</em>
                 </figcaption>
             </section>
