--- a/week15.html
+++ b/week15.html
@@ -71,7 +71,7 @@
 
             <!-- ROW 4 — FULL WIDTH IMAGE -->
             <section class="exp-row full">
-                <video src="/assets/videos/e7-hover.mp4" autoplay muted loop playsinline
+                <video src="assets/videos/e7-hover.mp4" autoplay muted loop playsinline
                     style="border-radius: 0px; border: 0;"></video>
             </section>
 
